fixed image download sizing being way too big, added in twitter account input field

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -126,3 +126,9 @@ body {
     overflow: "auto"
   }
 }
+
+@media (max-width: 768px) {
+  .content-container {
+    margin-top: 50px !important;
+  }
+}
